--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "serve": "node serve.js"
   },
   "dependencies": {
     "express": "^4.18.2",
